--- a/views/books.ejs
+++ b/views/books.ejs
@@ -12,5 +12,6 @@
             <li> <a href="/books/<%= p._id%>"><%= p.title %> </a></li>
         <% } %>
     </ul>
+    <a href="/books/new">Add new book</a>
 </body>
 </html>
