--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,14 +1,19 @@
 <%-layout('layouts/boilerplate') %>
-    <h1> <%=book.title %></h1>
-    <ul>
-        <li><h2>Price: <%=book.price%></h2></li>
-        <li><h2>Author: <%=book.author%></li>
-        <li><h2>Description: <%=book.description%></h2></li>
-        <li><h2>Year: <%=book.year%></h2></li>
-        <li><h2>Genre: <%=book.genre%></h2></li>
-    </ul>
-    <form action="/books/<%=book._id%>?_method=DELETE" method="POST">
-    <button>Delete</button>
-    </form>
-</body>
-</html>
+    <div class="row">
+        <div>
+            <span class="text-center title"><h1><%=book.title %></h1></span>
+            <span><img class="rounded mx-auto d-block m-3 " src="<%= book.image%>" alt="" width="200" height="250"></span>
+        </div>
+        <div class="mt-3">
+            <ul>
+                <li><h4> Price: <span class="text-muted">Rs. <%=book.price%></span> </h4></li>
+                <li><h4>Author: <span class="text-muted"><%=book.author%></span>  </h4></li>
+                <li><h4>Description: <span class="text-muted"><%=book.description%></span></h4></li>
+                <li><h4>Year: <span class="text-muted"><%=book.year%></span></h4></li>
+                <li><h4>Genre: <span class="text-muted"><%=book.genre%></span></h4></li>
+            </ul>
+        </div>
+        <form action="/books/<%=book._id%>?_method=DELETE" method="POST">
+        <button>Delete</button>
+        </form>
+    </div>
