--- a/views/books/books.ejs
+++ b/views/books/books.ejs
@@ -1,8 +1,13 @@
     <%- layout('layouts/boilerplate')%>
-    <h1>All books</h1>
-    <ul>
-        <% for(let p of books) {%>
-            <li> <a href="/books/<%= p._id%>"><%= p.title %> </a></li>
-        <% } %>
-    </ul>
+    <h1 class="all text-center">All books</h1>
+    <div >
+        <div class="row">
+            <% for(let p of books) {%>
+                <div class="col-md-2 p-3 m-3 mx-auto" style="width: 200px;">
+                    <a href="/books/<%=p._id%>"><img src="<%=p.image%>" alt="" class="img-fluid" style="width: 200px; height: 250px;"></a>
+                </div>
+            <% } %>
+        </div>
+    </div>
+        
     <a href="/books/new">Add new book</a>
