--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -1,34 +1,46 @@
-    <%- layout('layouts/boilerplate') %>
-    <h1>Edit a book</h1>
+<%- layout('layouts/boilerplate')%>
+<div class="row">
+    <h1 class="text-center">Edit book</h1>
+</div>
+<div class="col-6 offset-3">
     <form action="/books/<%=book._id%>?_method=PUT" method="POST">
-        <div>
-            <label for="title">Title: </label><br>
-            <input type="text" id="title" name="title" value="<%=book.title %>"><br><br>
+        <div class="mb-3">
+            <label class = "form-label"  for="title">Title: </label>
+            <input class = "form-control mb-3"  type="text" id="title" name="title" required>
         </div>
         <div>
-            <label for="author">Author: </label><br>
-            <input type="text" id="author" name="author"><br><br>
+            <label class = "form-label" for="author">Author: </label>
+            <input class = "form-control mb-3" ype="text" id="author" name="author" required>
         </div>
+        
         <div>
-            <label for="description">Description: </label><br>
-            <input type="text" id="description" name="description" value="<%=book.description %>"><br><br>
-        </div>
-        <div>
-            <label for="genre">Genre: </label><br>
-            <select name="genre" id="genre" aria-placeholder="Choose Genre">
+            <label class = "form-label" for="genre">Genre: </label>
+            <select class = "form-control mb-3" name="genre" id="genre" aria-placeholder="Choose Genre">
                 <option value="Fiction">Fiction</option>
                 <option value="Non-Fiction">Non-Fiction</option>
                 <option value="Autobiography">Autobiography</option>
                 <option value="Self-help">Self-help</option>
-            </select><br><br>
+            </select>
         </div>
         <div>
-            <label for="price">Price: </label><br>
-            <input type="number" name="price" id="price" value="<%=book.price %>"><br><br>
+            <label class = "form-label" for="price">Price: </label>
+            <input class = "form-control mb-3" type="number" name="price" id="price" required>
         </div>
         <div>
-            <label for="year">Year: </label><br>
-            <input type="number" name="year" id="year" value="<%=book.year %>"><br><br>
+            <label class = "form-label" for="year">Year: </label>
+            <input class = "form-control mb-3" type="number" name="year" id="year" required>
         </div>
-        <button>Edit</button>
+        <div>
+            <label class = "form-label" for="description">Description: </label>
+            <textarea class = "form-control mb-3" type="text" id="description" name="description" required></textarea>
+        </div>
+        <div>
+            <label class = "form-label" for="image">Image Url: </label>
+            <input class = "form-control mb-3" type="text" name="image" id="image">
+        </div>
+        <div>
+            <button class="btn btn-success mb-3">Edit Book</button>
+        </div>
     </form>
+</div>    
+    
