--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,34 +1,45 @@
     <%- layout('layouts/boilerplate')%>
-    <h1>Add a new Book</h1>
-    <form action="/books" method="POST">
-        <div>
-            <label for="title">Title: </label><br>
-            <input type="text" id="title" name="title"><br><br>
-        </div>
-        <div>
-            <label for="author">Author: </label><br>
-            <input type="text" id="author" name="author"><br><br>
-        </div>
-        <div>
-            <label for="description">Description: </label><br>
-            <input type="text" id="description" name="description"><br><br>
-        </div>
-        <div>
-            <label for="genre">Genre: </label><br>
-            <select name="genre" id="genre" aria-placeholder="Choose Genre">
-                <option value="Fiction">Fiction</option>
-                <option value="Non-Fiction">Non-Fiction</option>
-                <option value="Autobiography">Autobiography</option>
-                <option value="Self-help">Self-help</option>
-            </select><br><br>
-        </div>
-        <div>
-            <label for="price">Price: </label><br>
-            <input type="number" name="price" id="price"><br><br>
-        </div>
-        <div>
-            <label for="year">Year: </label><br>
-            <input type="number" name="year" id="year"><br><br>
-        </div>
-        <button>Add</button>
-    </form>
+    <div class="row">
+        <h1 class="text-center"> Add a new Book</h1>
+    </div>
+    <div class="col-6 offset-3">
+        <form action="/books" method="POST">
+            <div class="mb-3">
+                <label class = "form-label"  for="title">Title: </label>
+                <input class = "form-control mb-3"  type="text" id="title" name="title" required>
+            </div>
+            <div>
+                <label class = "form-label" for="author">Author: </label>
+                <input class = "form-control mb-3" ype="text" id="author" name="author" required>
+            </div>
+            
+            <div>
+                <label class = "form-label" for="genre">Genre: </label>
+                <select class = "form-control mb-3" name="genre" id="genre" aria-placeholder="Choose Genre">
+                    <option value="Fiction">Fiction</option>
+                    <option value="Non-Fiction">Non-Fiction</option>
+                    <option value="Autobiography">Autobiography</option>
+                    <option value="Self-help">Self-help</option>
+                </select>
+            </div>
+            <div>
+                <label class = "form-label" for="price">Price: </label>
+                <input class = "form-control mb-3" type="number" name="price" id="price" required>
+            </div>
+            <div>
+                <label class = "form-label" for="year">Year: </label>
+                <input class = "form-control mb-3" type="number" name="year" id="year" required>
+            </div>
+            <div>
+                <label class = "form-label" for="description">Description: </label>
+                <textarea class = "form-control mb-3" type="text" id="description" name="description" required></textarea>
+            </div>
+            <div>
+                <label class = "form-label" for="image">Image Url: </label>
+                <input class = "form-control mb-3" type="text" name="image" id="image">
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-success">Add Book</button>
+            </div>
+        </form>
+    </div>
